fix(dashboards-ng): align drag cursor style with figma

--- a/projects/element-theme/src/styles/components/_drag_drop.scss
+++ b/projects/element-theme/src/styles/components/_drag_drop.scss
@@ -2,7 +2,7 @@
 
 /* stylelint-disable declaration-no-important */
 
-body:has(.cdk-drag-preview) {
+body:has(.cdk-drag-preview, .ui-draggable-dragging) {
   cursor: grabbing !important;
 
   .cdk-drop-list:not(.cdk-drop-list-dragging) {
